...
        let titleLabel = UILabel(frame: .zero)
        titleLabel.font = UIFont(name: "Arial-Regular", size: 10.0)
        titleLabel.textAlignment = .left
        titleLabel.numberOfLines = 0
        titleLabel.textColor = .black
        titleLabel.backgroundColor = .white
        titleLabel.accessibilityLabel = "titleID"
        return titleLabel
    }()
    
    private lazy var dateLabel: UILabel = {
        let dateLabel = UILabel(frame: .zero)
        dateLabel.font = UIFont(name: "Arial-Regular", size: 10.0)
...
