...
        tbVEventList.allowsSelection = true
        tbVEventList.tableFooterView = UIView()
        tbVEventList.layer.borderWidth = 1.0
        tbVEventList.layer.borderColor = UIColor.black.cgColor
        tbVEventList.backgroundColor = .white
        tbVEventList.refreshControl = refreshControl
        tbVEventList.accessibilityLabel = "eventListTbView"
        return tbVEventList
    }()
    
    override init(frame: CGRect) {
        super.init(frame: frame)
        commonInit()
...
